Update jupyter notebook

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -26,8 +26,7 @@
      "text": [
       "[WDM] - ====== WebDriver manager ======\n",
       "[WDM] - Current google-chrome version is 89.0.4389\n",
-      "[WDM] - Get LATEST driver version for 89.0.4389\n",
-      "[WDM] - Driver [C:\\Users\\chris\\.wdm\\drivers\\chromedriver\\win32\\89.0.4389.23\\chromedriver.exe] found in cache\n"
+      "[WDM] - Get LATEST driver version for 89.0.4389\n"
      ]
     },
     {
@@ -36,6 +35,15 @@
      "text": [
       "\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - Get LATEST driver version for 89.0.4389\n",
+      "[WDM] - Trying to download new driver from https://chromedriver.storage.googleapis.com/89.0.4389.23/chromedriver_win32.zip\n",
+      "[WDM] - Driver has been saved in cache [C:\\Users\\chris\\.wdm\\drivers\\chromedriver\\win32\\89.0.4389.23]\n"
      ]
     }
    ],
@@ -96,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "'Another First: Perseverance Captures the Sounds of Driving on Mars'"
+       "\"NASA's InSight Detects Two Sizable Quakes on Mars\""
       ]
      },
      "execution_count": 6,
@@ -117,7 +125,7 @@
     {
      "data": {
       "text/plain": [
-       "'NASA’s newest rover recorded audio of itself crunching over the surface of the Red Planet, adding a whole new dimension to Mars exploration.'"
+       "'The magnitude 3.3 and 3.1 temblors originated in a region called Cerberus Fossae, further supporting the idea that this location is seismically active.'"
       ]
      },
      "execution_count": 7,
@@ -177,7 +185,7 @@
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars3.jpg'"
+       "'image/featured/mars2.jpg'"
       ]
      },
      "execution_count": 11,
@@ -198,7 +206,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars3.jpg'"
+       "'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars2.jpg'"
       ]
      },
      "execution_count": 12,
