--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -10,9 +10,7 @@
     "import pandas as pd\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup\n",
-    "from webdriver_manager.chrome import ChromeDriverManager\n",
-    "# import requests\n",
-    "# import pymongo"
+    "from webdriver_manager.chrome import ChromeDriverManager"
    ]
   },
   {
@@ -439,34 +437,6 @@
     "    \n",
     "hemisphere_image_urls"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Step 2 - MongoDB and Flask Application"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Step 3 - Submission"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
